@@ -1,0 +1,4 @@
+{
+  NSExecutable = "GCompris";
+  NSIcon = "gcompris.png";
+}
