@@ -1,4 +1,30 @@
-{
-  NSExecutable = "GCompris";
-  NSIcon = "gcompris.png";
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>English</string>
+    <key>CFBundleExecutable</key>
+    <string>GCompris</string>
+    <key>CFBundleGetInfoString</key>
+    <string>8.3BETA1 200-2006 Bruno Coudoin and the GCompris Team</string>
+    <key>CFBundleIconFile</key>
+    <string>GCompris.icns</string>
+    <key>CFBundleIdentifier</key>
+    <string>org.gcompris.GCompris</string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+    <key>CFBundleShortVersionString</key>
+    <string>8.3.BETA1</string>
+    <key>CFBundleSignature</key>
+    <string>GCom</string>
+    <key>CFBundleVersion</key>
+    <string>8.3.BETA1</string>
+    <key>NSHumanReadableCopyright</key>
+    <string>Copyright 2000-2007 GCompris Developers, GNU General Public Licensev2.</string>
+    <key>LSMinimumSystemVersion</key>
+    <string>10.3</string>
+</dict>
+</plist>
