@@ -1,1 +1,1 @@
-APPLGCompris
+APPLGCom
