@@ -1,3 +1,12 @@
+2007-03-27  Yves Combe <yves@ycombe.net>
+
+	Add SDL* frameworks copy in bundle.
+
+	* Makefile.am:
+	* macosx/Info-gnustep.plist:
+	* macosx/Info.plist:
+	* macosx/PkgInfo:
+
 2007-03-26  Yves Combe <yves@ycombe.net>
 
 	Small fix for GNUstep compatibility
